[project]
name = "Ebutuoy Downloader"
version = "1.0.0"
description = "A youtube downloader app designed to run on every platform. This app can download video and playslist in .mp3 and .mp4 format"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "kivy>=2.3.1",
    "pytube>=15.0.0",
]
